[gd_scene load_steps=15 format=3 uid="uid://b2vyca0is7h3p"]

[ext_resource type="Script" uid="uid://b6qok45yrbdnj" path="res://player/player.gd" id="1_8t03j"]
[ext_resource type="PackedScene" uid="uid://da1u52edx88kc" path="res://player/stamina_ui.tscn" id="2_k4avh"]
[ext_resource type="PackedScene" uid="uid://drmaeomkykstr" path="res://player/debugCamera.tscn" id="3_kurhd"]
[ext_resource type="PackedScene" uid="uid://cljvh2p7v80ll" path="res://environment/ingame_environment.tscn" id="3_pagxp"]
[ext_resource type="AudioStream" uid="uid://qju7cq2cq3es" path="res://player/walk.ogg" id="4_h4sw0"]
[ext_resource type="PackedScene" uid="uid://c8hufmrap4nap" path="res://player/crosshair.tscn" id="4_oypl4"]
[ext_resource type="AudioStream" uid="uid://bywm8xahkrk2o" path="res://player/run.ogg" id="5_feosj"]
[ext_resource type="AudioStream" uid="uid://d2v8aksvasi7a" path="res://player/crouch.ogg" id="6_3ebys"]
[ext_resource type="PackedScene" uid="uid://djxorq18harj3" path="res://player/shader_rect.tscn" id="8_rnoib"]
[ext_resource type="Script" uid="uid://d1phijy3uq15j" path="res://player/inventory/inventory.gd" id="11_2ieo8"]
[ext_resource type="PackedScene" uid="uid://xcvchlcrwwfx" path="res://player/inventory/inventory_view.tscn" id="12_ebec5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5kqbu"]
height = 1.87
radius = 0.3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_eojp2"]
height = 0.935
radius = 0.3

[sub_resource type="Environment" id="Environment_hdujp"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("inventory")]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_8t03j")
inventory = NodePath("Inventory")
metadata/_edit_lock_ = true

[node name="ShaderRect" parent="." instance=ExtResource("8_rnoib")]

[node name="Hitbox" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.935, 0)
shape = SubResource("CylinderShape3D_5kqbu")

[node name="HitboxCrouched" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.46854, 0)
shape = SubResource("CylinderShape3D_eojp2")
disabled = true

[node name="CamPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60548, 0)

[node name="PlayerCamera" type="Camera3D" parent="CamPivot"]
unique_name_in_owner = true
current = true

[node name="InteractionRaycast" type="RayCast3D" parent="CamPivot/PlayerCamera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
collision_mask = 9
hit_from_inside = true
collide_with_areas = true

[node name="HeldItems" type="Node3D" parent="CamPivot/PlayerCamera"]
unique_name_in_owner = true

[node name="Crosshair" parent="." instance=ExtResource("4_oypl4")]
unique_name_in_owner = true

[node name="StaminaUi" parent="." instance=ExtResource("2_k4avh")]
anchor_top = 0.925

[node name="WorldEnvironment" parent="." instance=ExtResource("3_pagxp")]

[node name="DebugCamera" parent="." instance=ExtResource("3_kurhd")]
environment = SubResource("Environment_hdujp")

[node name="BlackoutRect" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="WalkSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_h4sw0")
pitch_scale = 0.52

[node name="RunSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_feosj")
pitch_scale = 0.75

[node name="CrouchSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_3ebys")
pitch_scale = 0.4

[node name="Inventory" type="Node" parent="."]
script = ExtResource("11_2ieo8")
metadata/_custom_type_script = "uid://d1phijy3uq15j"

[node name="InventoryView" parent="." node_paths=PackedStringArray("inventory") instance=ExtResource("12_ebec5")]
inventory = NodePath("../Inventory")
